--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <head>
 <style>
 body {font-family:'Lucida Console', monospace}
+  .centered {
+  position: fixed; /* or absolute */
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
 </style>
 </head>
 <body>
-<h1> GUSTAFFGUSTAFFGUSTAFFGUSTAFFGUSTAFFGUSTAFFGUSTAFFGUSTAFFGUSTAFFGUSTAFF</h1>
-<p>anitalavalatina</p>
+<p class="centered">GUSTAFFERESTU?MEPERDIENLAREDAYUDA</p>
 </body>
 </html>
