add nigerian_prince spell

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <html>
-<head>
-<style>
-body {font-family:'Lucida Console', monospace}
-  .centered {
-  position: fixed; /* or absolute */
-  top: 50%;
-  left: 50%;
-  /* bring your own prefixes */
-  transform: translate(-50%, -50%);
-}
-</style>
-</head>
-<body>
-<p class="centered">GUSTAFFERESTU?MEPERDIENLAREDAYUDA</p>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+  </head>
+    <body>
+    <h1> Lista de Hechizos</h1>
+    <ul>
+      <li>
+        <!--<a href="./spell_template.html"> Plantilla</a>-->
+        <a href="./N1gerian_Princ3.html">N1gerian_Princ3.txt</a>
+      </li>
+    </ul>
+  </body>
 </html>
