--- a/spell_template.html
+++ b/spell_template.html
@@ -3,15 +3,14 @@
     <title>
       [Spell's Name]
     </title>
-    <style>
-      body {
-        background-color: #212121;
-        color: #fbfbfb;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
   </head>
   <body>
     <h1>[Spell Name]</h1>
+    <h2>Esferas</h2>
+    <ul>
+      <li>[Esfera]: [Valor]</li>
+    </ul>
     <h2>Efecto</h2>
     <p>[Spell's Effect]</p>
     <h2>Descripcion</h2>
