added navstar poisoning

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
@@ -7,7 +8,10 @@
     <ul>
       <li>
         <!--<a href="./spell_template.html"> Plantilla</a>-->
-        <a href="./N1gerian_Princ3.html">N1gerian_Princ3.txt</a>
+        <a href="./nigerian_prince.html">N1gerian_Princ3.txt</a>
+      </li>
+      <li>
+        <a href="./navstar_poisoning.html">NAVSTAR_POISONING</a>
       </li>
     </ul>
   </body>
